[gd_scene load_steps=2 format=3 uid="uid://qdgl8co6qy6"]

[ext_resource type="Script" path="res://Scripts/MonologueGraphEdit.gd" id="1_vyrsm"]

[node name="GraphEdit" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
grid_pattern = 1
snapping_distance = 25
right_disconnects = true
connection_lines_curvature = 0.0
zoom = 0.6
zoom_min = 0.2
zoom_max = 1.0
minimap_enabled = false
show_menu = false
show_zoom_buttons = false
script = ExtResource("1_vyrsm")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="connection_drag_ended" from="." to="." method="_on_connection_drag_ended"]
[connection signal="connection_drag_started" from="." to="." method="_on_connection_drag_started"]
[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="connection_to_empty" from="." to="." method="_on_connection_to_empty"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
